# services/tripmate/v1/entities/request/invitation/invitation.go
@@ -1,4 +1,4 @@
-package invitation
+package invitationrequest
 
 type Create struct {
 	Email string `json:"email" binding:"required,email,max=255"`
